--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorToolBar">#005C75</color>
+    <color name="colorStatus">#10353E</color>
+    <color name="colorTextWhite">#fff</color>
+    <color name="colorFloating">#e74c3c</color>
+    <color name="colorTextBlack">#000</color>
+    <!---->
 </resources>
