--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,24 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/colorToolBar</item>
+        <item name="colorPrimaryDark">@color/colorStatus</item>
+        <item name="colorAccent">@color/colorFloating</item>
+        <item name="android:textColorPrimary">@color/colorTextWhite</item>
+
     </style>
+    
+    <style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
+        <item name="android:actionMenuTextColor">@color/colorTextWhite</item>
+        <item name="overlapAnchor">false</item>
+    </style>
+
+    <style name="ToolBarPopupTheme" parent="@style/Theme.AppCompat">
+        <item name="android:actionMenuTextColor">@color/colorTextBlack</item>
+    </style>
+
+
 
 </resources>
