--- a/app/src/main/res/layout/item_home_list.xml
+++ b/app/src/main/res/layout/item_home_list.xml
@@ -1,11 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="bottom|left"
+    android:layout_marginLeft="@dimen/dimen_20dp"
     android:orientation="vertical">
-    <TextView
-        android:id="@+id/tv_text"
+
+    <ImageView
+        android:id="@+id/iv_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/tv_cate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="@dimen/dimen_40dp"
+        android:textColor="@color/colorTextWhite"
+        android:textSize="@dimen/dimen_30sp"
+        tools:text="预告 / 2'32''" />
+
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/tv_cate"
+        android:layout_marginBottom="@dimen/dimen_20dp"
+        android:textColor="@color/colorTextWhite"
+        android:textSize="@dimen/dimen_40sp"
+        android:textStyle="bold"
+        tools:text="神奇女侠第三款预告大首播" />
+
+</RelativeLayout>
