--- a/app/src/main/res/layout/item_home_list.xml
+++ b/app/src/main/res/layout/item_home_list.xml
@@ -2,15 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="bottom|left"
-    android:layout_marginLeft="@dimen/dimen_20dp"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/iv_item"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/tv_cate"
@@ -20,6 +17,7 @@
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="@dimen/dimen_40dp"
         android:textColor="@color/colorTextWhite"
+        android:layout_marginLeft="@dimen/dimen_20dp"
         android:textSize="@dimen/dimen_30sp"
         tools:text="预告 / 2'32''" />
 
@@ -30,6 +28,7 @@
         android:layout_above="@+id/tv_cate"
         android:layout_marginBottom="@dimen/dimen_20dp"
         android:textColor="@color/colorTextWhite"
+        android:layout_marginLeft="@dimen/dimen_20dp"
         android:textSize="@dimen/dimen_40sp"
         android:textStyle="bold"
         tools:text="神奇女侠第三款预告大首播" />
