--- a/app/src/main/res/layout/item_home_list.xml
+++ b/app/src/main/res/layout/item_home_list.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:id="@+id/rl_root"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@color/colorTextBlack">
 
     <ImageView
-        android:id="@+id/iv_item"
-        android:layout_width="match_parent"
+        android:id="@+id/iv_iv_item"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:foreground="#e0000000" />
 
     <TextView
         android:id="@+id/tv_cate"
@@ -15,21 +22,23 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="@dimen/dimen_40dp"
-        android:textColor="@color/colorTextWhite"
         android:layout_marginLeft="@dimen/dimen_20dp"
-        android:textSize="@dimen/dimen_30sp"
+        android:maxLines="1"
+        android:paddingBottom="@dimen/dimen_30dp"
+        android:textColor="@color/colorTextWhite"
+        android:textSize="@dimen/dimen_25sp"
         tools:text="预告 / 2'32''" />
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/tv_cate"
-        android:layout_marginBottom="@dimen/dimen_20dp"
-        android:textColor="@color/colorTextWhite"
+        android:layout_alignParentBottom="true"
         android:layout_marginLeft="@dimen/dimen_20dp"
-        android:textSize="@dimen/dimen_40sp"
+        android:maxLines="1"
+        android:paddingBottom="@dimen/dimen_70dp"
+        android:textColor="@color/colorTextWhite"
+        android:textSize="@dimen/dimen_35sp"
         android:textStyle="bold"
         tools:text="神奇女侠第三款预告大首播" />
 
